refactor: EtaStatus 매핑 로직 개선 및 테스트 코드 추가 (#351)
* refactor: calculate()인자로 Location 타입을 받도록 수정

* refactor: eta 로직 가독성 개선

* refactor: eta 테이블에 isMissing 컬럼 추가

* test: Eta 예외 상황 테스트 추가

* refactor: 조건식 검증 순서 변경

* test: 테스트 코드 축약

---------

Co-authored-by: coli-geonwoo <coli-geonwoo@gmail.com>